syntax = "proto3";

package todo;

option go_package = "example.com/todo/proto;proto";

message Todo {
  int32 id = 1;
  string title = 2;
  string description = 3;
}

message TodoId {
  int32 id = 1;
}

message Todos {
  repeated Todo todos = 1;
}

service TodoService {
  rpc CreateTodo (Todo) returns (Todo);
  rpc ReadTodo (TodoId) returns (Todo);
  rpc UpdateTodo (Todo) returns (Todo);
  rpc DeleteTodo (TodoId) returns (TodoId);
}
